use tonic::{Request, Response, Status};
use tracing::info;

use hodei_audit_proto::{
    DigestInfo, GenerateDigestRequest, GenerateDigestResponse, GetPublicKeysRequest,
    GetPublicKeysResponse, HealthCheckRequest, HealthCheckResponse, HealthStatus, KeysManifest,
    ListDigestsRequest, ListDigestsResponse, RotateKeyRequest, RotateKeyResponse,
    VerificationResult, VerifyDigestRequest, VerifyDigestResponse,
    audit_crypto_service_server::AuditCryptoService,
};

/// Implementación del servicio de criptografía de auditoría
/// Maneja verificación de digest, gestión de claves y compliance
#[derive(Debug, Clone, Default)]
pub struct AuditCryptoServiceImpl {
    // Contador de operaciones criptográficas
    crypto_counter: std::sync::Arc<std::sync::atomic::AtomicU64>,
}

impl AuditCryptoServiceImpl {
    /// Crear nueva instancia del servicio
    pub fn new() -> Self {
        info!("Initializing AuditCryptoService");
        Self {
            crypto_counter: std::sync::Arc::new(std::sync::atomic::AtomicU64::new(0)),
        }
    }

    /// Incrementar contador de operaciones
    fn next_operation_id(&self) -> String {
        let count = self
            .crypto_counter
            .fetch_add(1, std::sync::atomic::Ordering::SeqCst);
        format!("crypto_{}", count + 1)
    }
}

#[tonic::async_trait]
impl AuditCryptoService for AuditCryptoServiceImpl {
    /// Verificar integridad de digest
    async fn verify_digest(
        &self,
        request: Request<VerifyDigestRequest>,
    ) -> Result<Response<VerifyDigestResponse>, Status> {
        let req = request.into_inner();
        let tenant_id = req.tenant_id.clone();
        let digest_id = req.digest_id.clone();
        let digest_hash = req.digest_hash.clone();

        info!(
            tenant_id = tenant_id,
            digest_id = digest_id,
            "Received VerifyDigest request"
        );

        // Validación básica
        if tenant_id.is_empty() {
            return Err(Status::invalid_argument("tenant_id is required"));
        }

        if digest_id.is_empty() {
            return Err(Status::invalid_argument("digest_id is required"));
        }

        // TODO: Implementar verificación real de digest
        // - Descargar digest de S3
        // - Verificar firma criptográfica
        // - Verificar cadena de digests
        // - Verificar hash de archivos
        // - Retornar resultado de verificación

        // Por ahora, retornar verificación simulada
        let operation_id = self.next_operation_id();
        let now = prost_types::Timestamp::from(std::time::SystemTime::now());
        let digest_id_for_log = digest_id.clone();

        let verification_result = hodei_audit_proto::VerificationResult {
            overall_valid: true, // Simulado
            signature_valid: true,
            chain_valid: true,
            hash_matches: true,
            files_verified: 0,
            files_failed: 0,
            errors: vec![],
            previous_digest_id: "".to_string(),
            current_digest_id: digest_id,
        };

        info!(
            tenant_id = tenant_id,
            digest_id = digest_id_for_log,
            operation_id = operation_id,
            "Digest verification completed (simulated)"
        );

        let response = VerifyDigestResponse {
            result: Some(verification_result),
            verifier_id: "audit-service".to_string(),
            verified_at: Some(now),
        };

        Ok(Response::new(response))
    }

    /// Obtener manifiesto de claves públicas
    async fn get_public_keys(
        &self,
        request: Request<GetPublicKeysRequest>,
    ) -> Result<Response<GetPublicKeysResponse>, Status> {
        let req = request.into_inner();
        let tenant_id = req.tenant_id.clone();
        let include_inactive = req.include_inactive;

        info!(
            tenant_id = tenant_id,
            include_inactive = include_inactive,
            "Received GetPublicKeys request"
        );

        // Validación
        if tenant_id.is_empty() {
            return Err(Status::invalid_argument("tenant_id is required"));
        }

        // TODO: Implementar gestión real de claves
        // - Cargar claves de HashiCorp Vault/KMS
        // - Filtrar por estado (active/inactive)
        // - Generar manifiesto firmado
        // - Retornar claves públicas

        // Por ahora, retornar manifiesto vacío
        let now = prost_types::Timestamp::from(std::time::SystemTime::now());

        let manifest = hodei_audit_proto::KeysManifest {
            version: "1.0".to_string(),
            last_updated: Some(now),
            keys: vec![], // TODO: Incluir claves reales
            root_signature: "simulated_signature".to_string(),
            manifest_hash: "simulated_hash".to_string(),
        };

        info!(
            tenant_id = tenant_id,
            "Public keys manifest retrieved (simulated)"
        );

        let response = GetPublicKeysResponse {
            manifest: Some(manifest),
            fetched_at: Some(now),
        };

        Ok(Response::new(response))
    }

    /// Rotar clave de firma
    async fn rotate_key(
        &self,
        request: Request<RotateKeyRequest>,
    ) -> Result<Response<RotateKeyResponse>, Status> {
        let req = request.into_inner();
        let tenant_id = req.tenant_id.clone();
        let force_rotation = req.force_rotation;
        let reason = req.reason.clone();

        info!(
            tenant_id = tenant_id,
            force_rotation = force_rotation,
            reason = reason,
            "Received RotateKey request"
        );

        // Validación
        if tenant_id.is_empty() {
            return Err(Status::invalid_argument("tenant_id is required"));
        }

        // TODO: Implementar rotación real de claves
        // - Generar nueva clave Ed25519
        // - Almacenar en Vault/KMS
        // - Mantener clave anterior para verificación
        // - Firmar manifiesto actualizado
        // - Notificar a auditores

        // Por ahora, retornar rotación simulada
        let operation_id = self.next_operation_id();
        let now = prost_types::Timestamp::from(std::time::SystemTime::now());
        let rotation_time = now.clone();

        let old_key_valid_to = prost_types::Timestamp {
            seconds: now.seconds + (30 * 24 * 60 * 60), // +30 días
            nanos: now.nanos,
        };

        info!(
            tenant_id = tenant_id,
            operation_id = operation_id,
            "Key rotation completed (simulated)"
        );

        let response = RotateKeyResponse {
            new_key_id: "key_new_v1".to_string(),
            old_key_id: "key_old_v0".to_string(),
            rotation_time: Some(rotation_time),
            new_key_valid_from: Some(now),
            old_key_valid_to: Some(old_key_valid_to),
            rotation_id: operation_id,
        };

        Ok(Response::new(response))
    }

    /// Generar digest (usado por DigestWorker)
    async fn generate_digest(
        &self,
        request: Request<GenerateDigestRequest>,
    ) -> Result<Response<GenerateDigestResponse>, Status> {
        let req = request.into_inner();
        let tenant_id = req.tenant_id.clone();
        let start_time = req.start_time.clone();
        let end_time = req.end_time.clone();
        let previous_digest_id = req.previous_digest_id.clone();

        info!(
            tenant_id = tenant_id,
            start_time = start_time.is_some(),
            end_time = end_time.is_some(),
            "Received GenerateDigest request"
        );

        // Validación
        if tenant_id.is_empty() {
            return Err(Status::invalid_argument("tenant_id is required"));
        }

        if start_time.is_none() || end_time.is_none() {
            return Err(Status::invalid_argument(
                "start_time and end_time are required",
            ));
        }

        // TODO: Implementar generación real de digest
        // - Listar archivos de log del período
        // - Calcular SHA-256 de cada archivo
        // - Construir digest con cadena
        // - Firmar con Ed25519
        // - Subir a S3 con metadata
        // - Retornar información del digest

        // Por ahora, retornar digest simulado
        let operation_id = self.next_operation_id();
        let now = prost_types::Timestamp::from(std::time::SystemTime::now());

        let digest_info = hodei_audit_proto::DigestInfo {
            digest_id: format!("digest_{}", operation_id),
            tenant_id,
            digest_start_time: start_time,
            digest_end_time: end_time,
            previous_digest_hash: previous_digest_id,
            previous_digest_signature: "".to_string(),
            digest_signature: "simulated_signature".to_string(),
            digest_algorithm: "Ed25519".to_string(),
            digest_hash: "simulated_hash".to_string(),
            total_log_files: 0,
            total_events: 0,
            total_bytes: 0,
            s3_location: "s3://audit-logs/digests/".to_string(),
            log_files: vec![],
        };

        info!(
            tenant_id = req.tenant_id,
            operation_id = operation_id,
            "Digest generated successfully (simulated)"
        );

        let response = GenerateDigestResponse {
            digest: Some(digest_info),
            generated_at: Some(now),
            generator_id: "digest-worker".to_string(),
        };

        Ok(Response::new(response))
    }

    /// Listar digests
    async fn list_digests(
        &self,
        request: Request<ListDigestsRequest>,
    ) -> Result<Response<ListDigestsResponse>, Status> {
        let req = request.into_inner();
        let tenant_id = req.tenant_id.clone();
        let start_time = req.start_time.clone();
        let end_time = req.end_time.clone();
        let include_failed = req.include_failed;
        let limit = req.limit;

        info!(
            tenant_id = tenant_id,
            limit = limit,
            include_failed = include_failed,
            "Received ListDigests request"
        );

        // Validación
        if tenant_id.is_empty() {
            return Err(Status::invalid_argument("tenant_id is required"));
        }

        // TODO: Implementar listado real de digests
        // - Consultar en storage
        // - Aplicar filtros de tiempo
        // - Filtrar por estado
        // - Paginación
        // - Retornar digests

        // Por ahora, retornar lista vacía
        info!(
            tenant_id = tenant_id,
            "Digests listed successfully (simulated)"
        );

        let response = ListDigestsResponse {
            digests: vec![], // TODO: Retornar digests reales
            next_cursor: "".to_string(),
            total_count: 0,
        };

        Ok(Response::new(response))
    }
}
